2008-04-30  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-effect.c:
	(clutter_effect_closure_destroy): Do not remove the actor
	from the behaviour; the behaviour is an internal detail of the
	effect, and it will remove the actors anyway when finalized
	when g_object_unref() is called. This should guard against
	actors being destroyed while an effect is running.

2008-04-30  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/cogl/common/Makefile.am:
	* clutter/cogl/common/cogl-primitives.c:
	* clutter/cogl/common/cogl-primitives.h:
	* clutter/cogl/gl/Makefile.am:
	* clutter/cogl/gl/cogl-primitives.c:
	* clutter/cogl/gl/cogl-primitives.h:
	* clutter/cogl/gles/Makefile.am:
	* clutter/cogl/gles/cogl-primitives.c:
	* clutter/cogl/gles/cogl-primitives.h: moved duplicated code to the
	common directory.

2008-04-30  Robert Bragg  <bob@openedhand.com>
	
	* clutter/clutter/x11/clutter-x11-texture-pixmap.c:
	In _update_area_real with depth=16 we weren't setting up the alpha
	channel.

2008-04-29  Matthew Allum  <mallum@openedhand.com>

	* clutter/glx/Makefile.am:
	* clutter/x11/Makefile.am:
	Revert header install locations (Mistake in previous commit,
	fixes #898)

2008-04-29  Neil Roberts  <neil@o-hand.com>

	* clutter/clutter-actor.c (clutter_actor_move_anchor_point): The
	actor position was being moved in the wrong direction. Perhaps
	this was a cut-and-paste bug from move_anchor_point_from_gravity
	because in that function ax and ay represent the old anchor
	position, but in this function they represent the new.

2008-04-29  Matthew Allum  <mallum@openedhand.com>

	* clutter/glx/Makefile.am:
	* clutter/glx/clutter-glx-texture-pixmap.c:
	* clutter/glx/clutter-glx-texture-pixmap.h:
	* clutter/x11/Makefile.am:
	* clutter/x11/clutter-x11-texture-pixmap.c:
	* tests/test-pixmap.c:
        Commit newer x11 texture pixmap stuff (optionally using SHM).
        Also seemingly still broken overhauled glx-texture-pixmap
        (code by Robert and myself) 

	* configure.ac: